add rules routes

--- a/Frontend/my_bank/src/app/check-token/check-token.component.html
+++ b/Frontend/my_bank/src/app/check-token/check-token.component.html
@@ -1,8 +1,8 @@
 <div class="bg-alternative grid grid-rows-[0px,1fr,50px]  h-[calc(100vh)]">
-  <!-- <router-outlet (activate)="changeOfRoutes()"></router-outlet> -->
+
   <router-outlet></router-outlet>
-  <!-- @if(userToken){ -->
+  @if(token){
     <app-navbar></app-navbar>
-  <!-- } -->
+  }
 
 </div>
