req front to back sign up

--- a/Frontend/my_bank/src/app/sign-in/sign-in.component.html
+++ b/Frontend/my_bank/src/app/sign-in/sign-in.component.html
@@ -20,7 +20,7 @@
 
     <button type="submit" class="rounded-md bg-primary text-secondary w-full h-[40px]">Se connecter</button>
     
-    <a routerLink="/home">
+    <a routerLink="/mybank/home">
       <div type="submit" class="rounded-md bg-alternative2 text-secondary w-full h-[40px] flex place-items-center justify-center mt-4">Retour</div>
     </a>
   </form>
