--- a/Frontend/my_bank/src/app/account/account.component.html
+++ b/Frontend/my_bank/src/app/account/account.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="flex items-center place-content-between">
     
-    <a routerLink="/create-account" routerLinkActive="active">
+    <a routerLink="/mybank/create-account" routerLinkActive="active">
       <svg class="text-alternative2" width="35" height="35" viewBox="0 0 25 25" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <circle cx="12.5" cy="12.5" r="12" fill="#F6F2E7" stroke="currentColor"/>
         <line x1="7" y1="12.5" x2="18" y2="12.5" stroke="currentColor"/>
