--- a/Frontend/my_bank/src/app/home/home.component.html
+++ b/Frontend/my_bank/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 
   <h2 class="text-h2 font-semibold my-8">BIENVENUE</h2>
 
-  <a routerLink="/sign-in">
+  <a routerLink="/mybank/sign-in">
     <div class="w-[160px] h-[50px] bg-alternative2 rounded-md grid grid-cols-[50px,1fr] my-4">
       <div class="flex place-items-center justify-center">
         <div class="bg-secondary w-[25px] h-[25px] rounded-full flex place-items-center justify-center">
@@ -18,6 +18,6 @@
     </div>
   </a>
 
-  <a routerLink="/sign-up" class="text-alternative2 font-semibold text-p"> S'inscrire</a>
+  <a routerLink="/mybank/sign-up" class="text-alternative2 font-semibold text-p"> S'inscrire</a>
 
 </div>
