addpost create account

--- a/Frontend/my_bank/src/app/user-settings/user-settings.component.html
+++ b/Frontend/my_bank/src/app/user-settings/user-settings.component.html
@@ -1,6 +1,6 @@
 <div class="container bg-gradient-to-t from-secondary to-alternative">
   <div class="flex place-content-between">
-    <p class="text-p font-semibold text-primary">Deconnexion</p>
+    <button class="text-p font-semibold text-primary" (click)="disconnectUser()">Deconnexion</button>
     <app-my-bank-icon></app-my-bank-icon>
   </div>
 
