--- a/Frontend/my_bank/src/app/user-expenses/user-expenses.component.html
+++ b/Frontend/my_bank/src/app/user-expenses/user-expenses.component.html
@@ -1,8 +1,27 @@
-<div>
-  <p class="font-semibold">{{ data.name }}</p>
-  <div class="flex items-center place-content-between">
-    <p class="text-[#AEAEAE]">{{ data.date }}</p>
-    <p >{{data.amount}}</p>
-  </div>
-  <div class="h-[1px] w-full bg-[#AEAEAE]"></div>
+<div >
+  @for(transaction of transactionsByIban; track transaction.id){
+    <div class=" my-4">
+      @if(transaction.ibanReceiver === data.iban){
+        <p>Nom : {{transaction.name}}</p>
+        <div class="flex justify-between">
+          <p>Receveur : {{transaction.ibanReceiver}}</p>
+          <p class="text-green-400">+{{transaction.amount}}</p>
+        </div>
+        <p>Expéditeur : {{transaction.ibanSender}}</p>
+      }
+      @else {
+        <p>Nom : {{transaction.name}}</p>
+        <div class="flex justify-between">
+          <p>Receveur : {{transaction.ibanReceiver}}</p>
+          <p class="text-red-400">+{{transaction.amount}}</p>
+        </div>
+        <p>Expéditeur : {{transaction.ibanSender}}</p>
+      }
+      <div class="bg-black h-[1px] w-full"></div>
+    </div>  
+    <!-- <p>{{transaction.amount}}</p>
+      <p>{{transaction.ibanReceiver}}</p>
+      <p>{{transaction.ibanSender}}</p>
+      <p>{{transaction.name}}</p> -->
+  }
 </div>
