--- a/Frontend/my_bank/src/app/navbar/navbar.component.html
+++ b/Frontend/my_bank/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="bg-primary w-full h-[50px] grid grid-cols-3 place-items-center">
+<div class="fixed  bottom-0 bg-primary w-full h-[50px] grid grid-cols-3 place-items-center">
   
   <a class="text-secondary" routerLink="/mybank/account" routerLinkActive="active-link">
     <div class="h-[28px] grid place-items-center">
