--- a/Frontend/my_bank/src/app/user-expenses/user-expenses.component.html
+++ b/Frontend/my_bank/src/app/user-expenses/user-expenses.component.html
@@ -13,7 +13,7 @@
         <p>Nom : {{transaction.name}}</p>
         <div class="flex justify-between">
           <p>Receveur : {{transaction.ibanReceiver}}</p>
-          <p class="text-red-400">+{{transaction.amount}}</p>
+          <p class="text-red-400">-{{transaction.amount}}</p>
         </div>
         <p>Expéditeur : {{transaction.ibanSender}}</p>
       }
