--- a/Frontend/my_bank/src/app/check-token/check-token.component.html
+++ b/Frontend/my_bank/src/app/check-token/check-token.component.html
@@ -1,6 +1,7 @@
 <div class="bg-alternative grid grid-rows-[0px,1fr,50px]  h-[calc(100vh)]">
 
   <router-outlet></router-outlet>
+  <app-pop-up-component></app-pop-up-component>
   @if(token){
     <app-navbar></app-navbar>
   }
