--- a/Frontend/my_bank/src/app/user-settings/user-settings.component.html
+++ b/Frontend/my_bank/src/app/user-settings/user-settings.component.html
@@ -106,6 +106,6 @@
   
   </div>
   
-    <button type="submit" class="rounded-md bg-primary text-secondary w-full h-[40px]">Créer un nouveau compte</button>
+    <button type="submit" class="rounded-md bg-primary text-secondary w-full h-[40px]">Valider les modifications</button>
   </form>
 </div>
