--- a/Frontend/my_bank/src/app/user-settings/user-settings.component.html
+++ b/Frontend/my_bank/src/app/user-settings/user-settings.component.html
@@ -1,6 +1,6 @@
 <div class="container bg-gradient-to-t from-secondary to-alternative">
   <div class="flex place-content-between">
-    <button class="text-p font-semibold text-primary" (click)="disconnectUser()">Deconnexion</button>
+    <button class="text-p font-semibold text-primary hover:bg-primary hover:text-secondary rounded-md p-2" (click)="disconnectUser()">Deconnexion</button>
     <app-my-bank-icon></app-my-bank-icon>
   </div>
 
@@ -10,7 +10,7 @@
       <p class="text-h3 font-bold">{{clientData.lastName[0]}}</p>
     </div>
     <div>
-      <p class="text-h3 font-bold">Mr/Mme</p>
+      <p class="text-h3 font-bold"> @if(clientData.gender == "men"){Monsieur} @if(clientData.gender == "women"){Madame}</p>
       <p class="text-h3 font-bold">{{clientData.lastName}} {{clientData.firstName}}</p>
       <p>Née le {{clientData.dateBirthday}}</p>
     </div>
@@ -23,7 +23,7 @@
 <div class="container">
   <form [formGroup]="applyForm" (submit)="submitApplication()">
 
-    <div class="overflow-y-auto h-[500px] scrollbars my-4">
+    <div class="overflow-y-auto h-[500px] scrollbars my-4 pr-2">
 
 
 
@@ -37,7 +37,7 @@
     <div [ngClass]="cssIsFocused === 'password' ? 'my-4 bg-secondary relative h-[40px] border border-black rounded-md' : 'my-4 bg-secondary relative h-[40px]'">
       <label for="password" [ngClass]="cssIsFocused === 'password' || (applyForm.value.password != '' && applyForm.value.password != null) ? ' text-form absolute top-0 left-0 z-10 flex place-items-center pl-[10px] pointer-events-none' : ' text-small absolute z-10 inset-0 flex place-items-center pl-[10px] pointer-events-none'">Mot de passe</label>
       <div class="flex justify-between ">
-        <input id="password" type="string" [ngClass]="cssIsFocused === 'password' || (applyForm.value.password != '' && applyForm.value.password != null) ? 'bg-transparent outline-none absolute bottom-0 left-[10px] right-[40px] h-[30px]' : 'text-secondary bg-transparent outline-none absolute bottom-0 left-[10px] right-[40px] h-[30px]'" formControlName="password" (focus)="onFocus('password')" (blur)="onBlur()">
+        <input id="password" type="password" [ngClass]="cssIsFocused === 'password' || (applyForm.value.password != '' && applyForm.value.password != null) ? 'bg-transparent outline-none absolute bottom-0 left-[10px] right-[40px] h-[30px]' : 'text-secondary bg-transparent outline-none absolute bottom-0 left-[10px] right-[40px] h-[30px]'" formControlName="password" (focus)="onFocus('password')" (blur)="onBlur()">
       </div>
     </div>
 
